  + ManageString: New function: STRING_ESCAPE_BACKSLASH
  + ManageString: New function: STRING_ESCAPE_DOLLAR
  + ManageString: New function: STRING_ESCAPE_QUOTE
  + ManageTranslate: New function: ADD_POT_FILE 
  + Target rpmlint: rpmlint statistics are now combined.
  + cmake-fedora-fedpkg: Default is now build all active 
    Fedora (including rawhide) and EPEL releases in fedpkg branches.

- Removed:
  + cmake-fedora.conf.in is no longer needed.
  + TODO should be put in wiki.  
  + Modules:
    - ManageInstall: This is no longer needed.
  + Targets:
    - changelog_prev_update: 
  + Scripts:
    - cmake-fedora-functions is no longer needed.
    - cmake-fedora-changelog is no longer needed.
  + Variables:
    - PRJ_RPM_SPEC_FILE

- Changed:
  + DateTimeFormat: Macro to function: TODAY
  + ManageAPIDOC: MANAGE_APIDOC_DOXYGEN: Macro to function.
  + ManageAPIDOC: MANAGE_APIDOC_DOXYGEN: Parameters changed.
  + ManageFile: GIT_GLOB_TO_CMAKE_REGEX: Macro to function.
  + ManageString: STRING_ESCAPE_SEMICOLON: Macro to function.
  + ManageDependency: MANAGE_DEPENDENCY: Macro to function.
  + ManageRelease: MANAGE_RELEASE: Macro to function.
  + ManageRelease: MANAGE_RELEASE: Parameters changed.
  + ManageRPM: RPM_MOCK_BUILD: Parameters changed.
  + ManageSourceVersionControl: MANAGE_SOURCE_VERSION_CONTROL_GIT:
    - Macro to function
    - Parameters Changed
  + ManageSourceVersionControl: MANAGE_SOURCE_VERSION_CONTROL_HG:
    - Macro to function
    - Parameters Changed
    - Mark as experiment
  + ManageSourceVersionControl: MANAGE_SOURCE_VERSION_CONTROL_HG:
    - Macro to function
    - Parameters Changed
    - Mark as experiment
  + ManageTranslation: MANAGE_GETTEXT:
    - Macro to function
    - Parameters Changed
  + ManageUpload: For all marcos:
    - Macros are changed to function
    - Parameters has changed.
  + PRJ_DOC_DIR: Changed from docdir/<PRJ_NAME>-<PRJ_VER> 
    to docdir/<PRJ_NAME>
  
