@@ -84,26 +84,31 @@ SET(SOURCE_ARCHIVE_IGNORE_FILES
 INCLUDE(ManageVersion)
 INCLUDE(ManageFile)
 
+FUNCTION(SOURCE_ARCHIVE_CONTENTS_SET value)
+    SET(SOURCE_ARCHIVE_CONTENTS "${value}" CACHE INTERNAL "Source archive file list")
+ENDFUNCTION(SOURCE_ARCHIVE_CONTENTS_SET)
+SOURCE_ARCHIVE_CONTENTS_SET("")
+
+## Add whatever it's told
+FUNCTION(SOURCE_ARCHIVE_CONTENTS_ADD_FAST value)
+    LIST(APPEND SOURCE_ARCHIVE_CONTENTS "${value}")
+    SOURCE_ARCHIVE_CONTENTS_SET("${SOURCE_ARCHIVE_CONTENTS}")
+ENDFUNCTION(SOURCE_ARCHIVE_CONTENTS_ADD_FAST)
+
 FUNCTION(SOURCE_ARCHIVE_CONTENTS_ADD filename)
     GET_FILENAME_COMPONENT(_file "${filename}" ABSOLUTE)
     FILE(RELATIVE_PATH _f ${CMAKE_SOURCE_DIR} "${_file}")
     LIST(FIND SOURCE_ARCHIVE_CONTENTS "${_f}" _index)
     IF(_index LESS 0)
-	LIST(APPEND SOURCE_ARCHIVE_CONTENTS "${_f}")
-	SET(SOURCE_ARCHIVE_CONTENTS "${SOURCE_ARCHIVE_CONTENTS}"
-	    CACHE INTERNAL "Source archive file list"
-	    )
+	SOURCE_ARCHIVE_CONTENTS_ADD_FAST("${_f}")
     ENDIF(_index LESS 0)
-ENDFUNCTION(SOURCE_ARCHIVE_CONTENTS_ADD filename)
+ENDFUNCTION(SOURCE_ARCHIVE_CONTENTS_ADD)
 
 FUNCTION(SOURCE_ARCHIVE_CONTENTS_ADD_NO_CHECK filename)
     GET_FILENAME_COMPONENT(_file "${filename}" ABSOLUTE)
     FILE(RELATIVE_PATH _f ${CMAKE_SOURCE_DIR} "${_file}")
-    LIST(APPEND SOURCE_ARCHIVE_CONTENTS "${_f}")
-    SET(SOURCE_ARCHIVE_CONTENTS "${SOURCE_ARCHIVE_CONTENTS}"
-	CACHE INTERNAL "Source archive file list"
-	)
-ENDFUNCTION(SOURCE_ARCHIVE_CONTENTS_ADD_NO_CHECK filename)
+    SOURCE_ARCHIVE_CONTENTS_ADD_FAST("${_f}")
+ENDFUNCTION(SOURCE_ARCHIVE_CONTENTS_ADD_NO_CHECK)
 
 # Internal:  SOURCE_ARCHIVE_GET_CONTENTS()
 #   - Return all source file to be packed.
@@ -115,8 +120,6 @@ FUNCTION(SOURCE_ARCHIVE_GET_CONTENTS )
     STRING(REPLACE "\\\\" "\\" _ignore_files
         "${SOURCE_ARCHIVE_IGNORE_FILES}")
 
-    ## Clean the contents: otnerwise the duplication will add up
-    SET(SOURCE_ARCHIVE_CONTENTS "" CACHE INTERNAL "Source archive file list")
     FOREACH(_file ${_ls})
 	SET(_matched 0)
 	FOREACH(filePattern ${_ignore_files})
@@ -131,9 +134,6 @@ FUNCTION(SOURCE_ARCHIVE_GET_CONTENTS )
 	    SOURCE_ARCHIVE_CONTENTS_ADD_NO_CHECK("${_file}")
 	ENDIF(NOT _matched)
     ENDFOREACH(_file ${_ls})
-    SET(SOURCE_ARCHIVE_CONTENTS "${SOURCE_ARCHIVE_CONTENTS}" 
-	CACHE INTERNAL "Source archive file list"
-	)
     M_MSG(${M_INFO2} "SOURCE_ARCHIVE_CONTENTS=${SOURCE_ARCHIVE_CONTENTS}")
 ENDFUNCTION(SOURCE_ARCHIVE_GET_CONTENTS)
 
@@ -200,18 +200,12 @@ MACRO(PACK_SOURCE_CPACK var)
     LIST(APPEND SOURCE_ARCHIVE_IGNORE_FILES "${PROJECT_NAME}-[^/]*-Source")
     SET(SOURCE_ARCHIVE_NAME 
 	"${CPACK_SOURCE_PACKAGE_FILE_NAME}.${SOURCE_ARCHIVE_FILE_EXTENSION}" 
-	CACHE STRING "Source archive name" FORCE)
+	CACHE STRING "Source archive name" FORCE
+	)
     SET(${var} "${SOURCE_ARCHIVE_NAME}")
 
     SOURCE_ARCHIVE_GET_IGNORE_LIST(_opt_GITIGNORE _opt_INCLUDE)
     LIST(APPEND CPACK_SOURCE_IGNORE_FILES ${SOURCE_ARCHIVE_IGNORE_FILES})
-    SOURCE_ARCHIVE_GET_CONTENTS()
-    SET(SOURCE_ARCHIVE_CONTENTS_ABSOLUTE "")
-    FOREACH(_file ${SOURCE_ARCHIVE_CONTENTS})
-	LIST(APPEND SOURCE_ARCHIVE_CONTENTS_ABSOLUTE
-	   "${CMAKE_HOME_DIRECTORY}/${_file}")
-    ENDFOREACH(_file ${SOURCE_ARCHIVE_CONTENTS})
-
     INCLUDE(CPack)
 ENDMACRO(PACK_SOURCE_CPACK var)
 
@@ -265,7 +259,14 @@ MACRO(PACK_SOURCE_ARCHIVE)
     SET(SOURCE_ARCHIVE_NAME "${_outputFile}" 
 	CACHE FILEPATH "Source archive name" FORCE)
 
-    SET(_dep_list ${SOURCE_ARCHIVE_CONTENTS_ABSOLUTE})
+    SET(SOURCE_ARCHIVE_CONTENTS_ABSOLUTE "")
+    FOREACH(_file ${SOURCE_ARCHIVE_CONTENTS})
+	LIST(APPEND SOURCE_ARCHIVE_CONTENTS_ABSOLUTE
+	    "${CMAKE_HOME_DIRECTORY}/${_file}"
+	    )
+    ENDFOREACH(_file ${SOURCE_ARCHIVE_CONTENTS})
+
+    SET(_dep_list "${SOURCE_ARCHIVE_CONTENTS_ABSOLUTE}")
     ## If own directory,
     IF(_own_dir)
 	### Need to create it
